# doppelkopfCalculator

./: .gitignore  LICENSE.md  README.md  clean.bat  clean.sh  index.html  original_design.md  package-lock.json  package.json  todo.md  vite.config.ts
.kiro/specs/doppelkopf-scorer/: tasks.md
specs/doppelkopf-scorer/: design.md  requirements.md  tasks.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ThemeProvider.tsx
src/components/EntryScreen/: EntryScreen.styles.ts  EntryScreen.tsx  PlayerInput.styles.ts  PlayerInput.tsx  SpritzeModeSelector.tsx  index.ts
src/components/GameScreen/: GameScreen.styles.ts  GameScreen.tsx  GameTable.styles.ts  GameTable.tsx  PlayerBarChart.tsx  PlayerCard.styles.ts  PlayerCard.tsx  PlayerCell.styles.ts  PlayerCell.tsx  PlayerSidebar.styles.ts  PlayerSidebar.tsx  RoundNumber.styles.ts  RoundNumber.tsx  RoundRow.styles.ts  RoundRow.tsx  SpritzeCheckboxes.styles.ts  SpritzeCheckboxes.tsx  SpritzeDisplay.styles.ts  SpritzeDisplay.tsx  constants.ts  index.ts
src/constants/: game.ts  index.ts
src/context/: ThemeContext.tsx  themeTypes.ts
src/errors/: GameStateError.ts
src/hooks/: index.ts  useGameState.ts  useTheme.ts
src/hooks/useGameState/: core.ts  (+8 more)
src/logic/: positionCalculator.ts  roundManager.ts  scoreCalculator.ts  spritzeManager.ts
src/services/: crossPlatformStorage.ts  desktopFeatures.ts  localStorage.ts
src/theme/: index.ts
src/types/: index.ts
src/utils/: debounce.ts  idGenerator.ts  themeUtils.ts
(+25 files in other folders)
